5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1752_1524.log
== TEST (2019-05-16 16:12:46) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qnicial
	qt = qt + qnova
	qd = qd + qdoenca
	xx = ((qcg + qt)-qd)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qcg = qcg + qnicial
NameError: name 'qnicial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:03) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	xx = ((qcg + qt)-qd)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qcg = qcg + qnicial
NameError: name 'qnicial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:22) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial < qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	xx = ((qcg + qt)-qd)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(xx)
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:09) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (xx < qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	xx = ((qcg + qt)-qd)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:41) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	qinicial = ((qcg + qt)-qd)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:47) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	qinicial = ((qcg + qt)-qd)
print(xx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:15:10) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	qinicial = ((qcg + qt)-qd)
print(qinicial)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:16:14) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:16:27) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:16:46) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:10) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qd > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:24) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qd > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:59) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qt > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:07) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qt > qdoenca):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:47) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qt > qd):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:04) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qt > qd):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (xx < qdoenca):
NameError: name 'xx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:34) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qd):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:45) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qd):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	
print(qt)
-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:36) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qd):
	qcg = qcg + qinicial
	qt = qt + qnova
	qd = qd + qdoenca
	qd = (qt - qd)
	
print(qt)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:22) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qd):
	
	qt = qt + qnova
	qd = qd + qdoenca
	qd = (qt - qd)
	
print(qt)
-- OUTPUT:
360
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:43) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qd):
	
	qt = qt + qnova
	qd = qd + qdoenca
	qd = (qt - qd)
	
print(qd)
-- OUTPUT:
180
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:11) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qcg = 0
qt = 0
qd = 0
while (qinicial > qd):
	
	qt = qt + qnova/4
	qd = qd + qdoenca/4
	qd = (qt - qd)
	
print(qd)
-- OUTPUT:
150.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:51) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qinicial > qy):
	
	qt = qt + qnova
	qd = qd + qdoenca
	qd = qd -qt
	
print(qd)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (qinicial > qy):
NameError: name 'qy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:02) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qinicial > qt):
	
	qt = qt + qnova
	qd = qd + qdoenca
	qd = qd -qt
	
print(qd)
-- OUTPUT:
-90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:44) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qinicial > qt):
	
	qt = qt + qnova
	qd = qd + qdoenca
	
	
print(qt - qd)
-- OUTPUT:
-90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:53) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qinicial > qt):
	
	qt = qt + qnova
	qd = qd + qdoenca
	
	
print(qt - qd)
-- OUTPUT:
-90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:18) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qinicial > qt):
	
	qt = qt + 1
	qd = qd + 1
	
	
print(qt - qd)
-- OUTPUT:
-90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:51) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qdoenca > qt):
	
	qt = qt + 1
	qd = qd + 1
	
	
print(qt - qd)
-- OUTPUT:
-90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:20) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd > qt):
	
	qt = qt + 1
	qd = qd + 1
	
	
print(qt - qd)
-- OUTPUT:
-90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:31) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd ><qt):
	
	qt = qt + 1
	qd = qd + 1
	
	
print(qt - qd)
-- ERROR:
File "XXXX", line 8
    while (qd ><qt):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:35) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd <qt):
	
	qt = qt + 1
	qd = qd + 1
	
	
print(qt - qd)
-- ERROR:
File "XXXX", line 8
    while (qd ><qt):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:45:15) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd < qt):
	qt = qt + qnova
	qd = qd + 1
print(qd)	
	
	
	
	

-- ERROR:
File "XXXX", line 8
    while (qd ><qt):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:45:31) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd < qt):
	qt = qt + qnova
	qd = qd + 1
print(qd)	
	
	
	
	

-- ERROR:
File "XXXX", line 8
    while (qd ><qt):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:30) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd < 1):
	qt = qt + qnova
	qd = qd + 1
print(qd)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:39) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qd < 1):
	qt = qt + qnova
	qd = qd + 1
print(qd)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:46:59) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))


qt = 0
qd = 0
while (qt < 1):
	qt = qt + qnova
	qd = qd + 1
print(qd)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:39) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qt < 1):
	qt = qt + qnova
	qd = qd + qdoenca
	qtri = qtri + 1
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:54) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qt < 12):
	qt = qt + qnova
	qd = qd + qdoenca
	qtri = qtri + 1
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:51:10) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while not(qt  == qd):
	qt = qt + qnova
	qd = qd + qdoenca
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:52:25) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qtri < 1):
	qt = qt + qnova
	qd = qd + qdoenca
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:52:49) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qt - qd < qtri < 1 ):
	qt = qt + qnova
	qd = qd + qdoenca
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:53:58) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial < qd):
	qt = qt + qnova
	qd = qd + qdoenca
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:08) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial < qd - qt):
	qt = qt + qnova
	qd = qd + qdoenca
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:55:46) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial < qdoenca):
	qt = qt + qnova
	qd = qd + qdoenca
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:06) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial > qd):
	qt = qt + qnova
	qd = qd + qdoenca
	
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:21) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial > qd):
	qt = qt + qnova
	qd = qd + qdoenca
	
	
	qtri = qtri + 1
   
print(qtri)	
	
	
	
	

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:42) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial > qd):
	qt = qt + qnova
	qd = qd + qdoenca
	
	
	qtri = qtri + 3
   
print(qtri)	
	
	
	
	

-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:57:53) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial > qd):
	qt = qt + qnova
	qd = qd + qdoenca
	
	
	qtri = qtri + 2
   
print(qtri)	
	
	
	
	

-- EXECUTION TIME:
0.121779
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
4
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
8
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:57:54) 
-- CODE:
qinicial = int(input("Quantidade inicial:"))
qnova = int(input("Quantidade de novos grifos:"))
qdoenca = int(input("Mortos pela praga:"))

qtri = 0
qt = 0
qd = 0
while (qinicial > qd):
	qt = qt + qnova
	qd = qd + qdoenca
	
	
	qtri = qtri + 2
   
print(qtri)	
	
	
	
	

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
